<resources>
    <string name="app_name">Moodify</string>
    <string name="moodify">Moodify</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="already_have_an_account">Already have an account? </string>
    <string name="click_here"> Click here</string>
    <string name="fullname">Fullname</string>
    <string name="input_your_name">Input your name</string>
    <string name="email">Email</string>
    <string name="input_your_email">Input your email</string>
    <string name="password">Password</string>
    <string name="input_your_password">Input your password</string>
    <string name="create">Create</string>
    <string name="or_login_with">Or login with</string>
    <string name="google">Google</string>
    <string name="login_to_your_account">Login to Your Account</string>
    <string name="don_t_have_an_account_yet">Don\'t have an account yet?</string>
    <string name="login">Login</string>
    <string name="title_menu_1">Your loyal friend for your mental health</string>
    <string name="title_menu_2">Manage stress, increase happiness.</string>
    <string name="title_menu_3">Manage stress, increase happiness.</string>
    <string name="desc_menu_1">This app provides various features to help you manage your mental health.</string>
    <string name="desc_menu_2">Make your days more productive and motivated with the help of meditation tools.</string>
    <string name="desc_menu_3">Make your days more productive and motivated with the help of meditation tools.</string>
    <string name="next">Next</string>
</resources>