<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="35dp">

    <!-- Judul -->
    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/nunito_sans_bold"
        android:text="@string/moodify"
        android:textSize="32sp"
        android:textStyle="bold" />

    <!-- Create your account -->
    <TextView
        android:id="@+id/tv_create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:text="@string/login_to_your_account"
        android:fontFamily="@font/nunito_sans_semibold"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:orientation="horizontal">

    <!-- Already have an account? Click here -->
    <TextView
        android:id="@+id/dont_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account_yet"
        android:fontFamily="@font/nunito_sans"
        android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_click_here"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/click_here"
            android:fontFamily="@font/nunito_sans"
            android:textSize="16sp"
            android:textColor="@android:color/holo_blue_dark"/>

    </LinearLayout>

    <!-- Email -->
    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/email"
        android:fontFamily="@font/nunito_sans_semibold"
        android:textSize="16sp" />

    <!-- Email label and EditText -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Large">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_edittext"
            android:hint="@string/input_your_email"
            android:fontFamily="@font/nunito_sans"
            android:ems="10"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Password -->
    <TextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/password"
        android:fontFamily="@font/nunito_sans_semibold"
        android:textSize="16sp" />

    <!-- Password label and EditText -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Large"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_edittext"
            android:hint="@string/input_your_password"
            android:fontFamily="@font/nunito_sans"
            android:ems="10"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Create button -->
    <Button
        android:id="@+id/btn_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="15dp"
        android:backgroundTint="#00ADB5"
        android:layout_marginTop="24dp"
        android:text="@string/login"
        android:fontFamily="@font/nunito_sans_semibold"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <View
            android:layout_width="110dp"
            android:layout_height="1dp"
            android:layout_marginTop="11dp"
            android:background="@color/black"/>

        <TextView
            android:id="@+id/tv_or_login_with"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/or_login_with"
            android:fontFamily="@font/nunito_sans"
            android:textSize="16sp" />

        <View
            android:layout_width="110dp"
            android:layout_height="1dp"
            android:layout_marginTop="11dp"
            android:background="@color/black"/>

    </LinearLayout>

    <!-- google button -->
    <Button
        android:id="@+id/btn_google"
        style="@style/Widget.Material3.Button.ElevatedButton.Icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:padding="15dp"
        android:drawableLeft="@drawable/icon_google"
        android:layout_marginTop="20dp"
        android:text="@string/google"
        android:fontFamily="@font/nunito_sans_semibold"
        android:textColor="@color/black"/>


</LinearLayout>