<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/activity_boarding_page_scene"
    tools:context=".BoardingPage.BoardingPageActivity">

    <ImageView
        android:id="@+id/logoMenu1"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_marginStart="16dp"
        android:src="@drawable/img_boarding1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/titleMenu1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/nunito_sans_bold"
        android:gravity="center_horizontal"
        android:text="@string/title_menu_1"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/logoMenu1"
        app:layout_constraintStart_toStartOf="@+id/logoMenu1"
        app:layout_constraintTop_toBottomOf="@+id/logoMenu1" />

    <TextView
        android:id="@+id/descMenu1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/nunito_sans_semibold"
        android:gravity="center_horizontal"
        android:text="@string/desc_menu_1"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/titleMenu1"
        app:layout_constraintStart_toStartOf="@+id/titleMenu1"
        app:layout_constraintTop_toBottomOf="@+id/titleMenu1" />

    <ImageView
        android:id="@+id/logoMenu2"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:src="@drawable/img_boarding2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/titleMenu2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/nunito_sans_semibold"
        android:gravity="center_horizontal"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/logoMenu2"
        app:layout_constraintStart_toStartOf="@+id/logoMenu2"
        app:layout_constraintTop_toBottomOf="@+id/logoMenu2"
        android:text="@string/title_menu_2" />

    <TextView
        android:id="@+id/descMenu2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center_horizontal"
        android:text="@string/desc_menu_2"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/titleMenu2"
        app:layout_constraintStart_toStartOf="@+id/titleMenu2"
        app:layout_constraintTop_toBottomOf="@+id/titleMenu2" />

    <ImageView
        android:id="@+id/logoMenu3"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:src="@drawable/img_boarding3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/titleMenu3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/nunito_sans_bold"
        android:gravity="center_horizontal"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/logoMenu3"
        app:layout_constraintStart_toStartOf="@+id/logoMenu3"
        app:layout_constraintTop_toBottomOf="@+id/logoMenu3"
        android:text="@string/title_menu_3" />

    <TextView
        android:id="@+id/descMenu3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/nunito_sans_semibold"
        android:gravity="center_horizontal"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/titleMenu3"
        app:layout_constraintStart_toStartOf="@+id/titleMenu3"
        app:layout_constraintTop_toBottomOf="@+id/titleMenu3"
        android:text="@string/desc_menu_3" />



    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/menu1"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        app:altSrc="@drawable/ic_circle_full"
        app:layout_constraintEnd_toStartOf="@+id/menu2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:srcCompat="@drawable/ic_circle"
        app:tint="@color/biru" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/menu2"
        android:layout_width="20dp"
        android:layout_height="20dp"
        app:altSrc="@drawable/ic_circle_full"
        app:layout_constraintBottom_toBottomOf="@+id/menu1"
        app:layout_constraintEnd_toStartOf="@+id/menu3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/menu1"
        app:layout_constraintTop_toTopOf="@+id/menu1"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_circle"
        app:tint="@color/biru" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/menu3"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginEnd="8dp"
        app:altSrc="@drawable/ic_circle_full"
        app:layout_constraintBottom_toBottomOf="@+id/menu2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/menu2"
        app:layout_constraintTop_toTopOf="@+id/menu2"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_circle"
        app:tint="@color/biru" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:alpha="0"
        android:backgroundTint="@color/biru"
        android:text="@string/login"
        app:layout_constraintBottom_toTopOf="@+id/menu1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvMoodify"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textSize="32sp"
        android:text="@string/moodify"
        android:gravity="center"
        android:textStyle="bold"
        android:fontFamily="@font/nunito_sans_bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.motion.widget.MotionLayout>
